Agregando estilo al contenedor de salida del texto del sifrado

--- a/index.html
+++ b/index.html
@@ -33,7 +33,9 @@
                     <p>Ingresa el texto que desees encriptar o desencriptar</p>
                 </div>
                 <div class="contenedor-salida">
-                    <textarea class="txt" id="encriptado" cols="30" rows="10"></textarea>
+                    <div class="texto">
+                        <textarea class="txt" id="encriptado" disabled></textarea>
+                    </div>
                     <div class="boton">
                         <button class="btn"> Copiar</button>
                     </div>
