Agregando estilo al contenedor de salida del  mensaje de sifrado

--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
             </section>
             <section class="salida">
                 <div class="mensaje">
-                    <img src="" alt="imagen">
-                    <h5>Ningún mensaje fue encontrado</h5>
+                    <img src="img/Muñeco.png" alt="imagen">
+                    <h3>Ningún mensaje fue encontrado</h3>
                     <p>Ingresa el texto que desees encriptar o desencriptar</p>
                 </div>
                 <div class="contenedor-salida">
