--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Ubuntu" rel="stylesheet">
     <!-- Estilos -->
     <link rel="stylesheet" href="css/style.css">
+    <!-- icon -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
 </head>
 <body>
     <div class="contenedor-principal">
@@ -17,6 +19,7 @@
             <section class="entrada">
                 <div class="texto">
                     <textarea class="txt" id="mensaje" cols="30" rows="10" placeholder="Ingresa el texto aqui"></textarea>
+                    <button class="limpiar ocultar" onclick="limpiar()"><i class="bi bi-trash"></i></button>
                 </div>
                 <div class="contenedor-botones">
                     <div class="alerta">
@@ -25,7 +28,7 @@
                     </div>
                     <div class="botones">
                         <button class="btn btn-primario" onclick="encriptar()">Emcriptar</button>
-                        <button class="btn btn-secundario" onclick="descifrar()">Desencriptar</button>
+                        <button class="btn btn-secundario" onclick="desencriptar()">Desencriptar</button>
                     </div>
                 </div>
             </section>
@@ -41,7 +44,7 @@
                         </textarea>
                     </div>
                     <div class="boton">
-                        <button class="btn"> Copiar</button>
+                        <button class="btn" onclick="copiar()"> Copiar</button>
                     </div>
                 </div>
             </section>
@@ -51,6 +54,7 @@
         © 2024  - Alura Latam - JOSÉ ISRAEL CASTRO DE LA TORRE
     </footer>
     <!-- javascript -->
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script src="js/script.js"></script>
 </body>
 </html>
