--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Encriptador de mensaje</title>
+
+    <link rel="icon" type="image/x-icon" href="img/logo.png">
     <link href="https://fonts.googleapis.com/css2?family=Ubuntu" rel="stylesheet">
     <!-- Estilos -->
     <link rel="stylesheet" href="css/style.css">
